spl2/hn_tests/failing/poly_var.hn
hnMain = {
	x = print
	x 2
}